[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Hazards/BoatSpawner.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 352, 0, 0, 0, 0, 0, 352, 344, 0, 0, 0, 0, 0, 344, 0, 0, 0, 0, 0, 0 )
}

[node name="BoatSpawner" type="YSort"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BoatSpawn" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BoatSpawnLocation" type="PathFollow2D" parent="BoatSpawn"]

[node name="PirateTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="PirateTimer" to="." method="_on_PirateTimer_timeout"]
